[package]
name = "rebnf"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "An extended form of EBNF, intended primarily for specifying Rust grammar."
license = "MIT or Apache-2"
repository = "https://github.com/nikomatsakis/rebnf"
readme = "README.md"

[dependencies]
